# mcp-server

./: .coverage  .env  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ERROR_HANDLING.md  HTTP_500_ERROR_IMPROVEMENT_PLAN.md  PR_168_ANALYSIS.md  README.md  REVIEW.md  TOOLS.md  coverage.xml  logging-json.conf  mcp-server-notes.md  pyproject.toml  release-notes.md  search_description_draft.txt  server.json  server.json.template  server.py
.claude/: CLAUDE.md
.claude/skills/data-app-workflow/: SKILL.md
.claude/skills/release-notes/: SKILL.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release_notes_template.md
.github/actions/update-version/: action.yml
.github/releases/: v1.55.0-github.md  v1.55.0.md
.github/scripts/: kaibench-cost-guardrails.py  kaibench-parse-results.py  kaibench-step-summary.py  kaibench-verbose-results.py
.github/workflows/: ci.yml  kaibench.yml  linear-release.yml  release.yml
charts/keboola-mcp-server/: Chart.yaml  values.yaml
charts/keboola-mcp-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
docs/: VERSION_MANAGEMENT.md  architecture-diagrams.md  local-backend.md  multi-project-architecture.md  python-js-data-apps.md
docs/plans/: 2026-02-28-mcp-apps-job-monitor-design.md  2026-02-28-mcp-apps-job-monitor-plan.md  2026-03-01-config-diff-viewer-design.md  2026-03-01-config-diff-viewer-plan.md
docs/rfc/: RFC-001-config-unification.md  RFC-002-live-data-apps.md  RFC-003-semantic-layer.md  RFC-004-import-from-keboola.md
feature_spec/brached_storage_support/: UI_LEVEL_DEFERENCE_ANALYSIS.md  implementation_plan.md  instructions.md
feature_spec/branch_aware_workspace/: RFC.md
feature_spec/branched_storage_support/: RFC.md  instructions.md  test_results.md
feature_spec/mpa_support/: mpa-plan.md
feature_spec/project_info_branch_context/: RFC.md
feature_spec/shared_code_support/: RFC.md
feature_spec/variables/: RFC.md  test_scenarios.txt
integtests/: README.md  conftest.py  project_lock.py  test_client.py  test_errors.py  test_flow_tools.py  test_http_error_handling.py  test_mcp_server.py  test_project_lock.py  test_project_tools.py  test_storage_tools.py  test_validate.py  test_workspace.py
integtests/clients/: test_client.py  test_data_science.py  test_encryption.py  test_metastore.py
integtests/components/: test_tools.py
integtests/tools/: test_data_apps.py  test_doc.py  test_flow.py  test_jobs.py  test_project.py  test_search.py  test_sql.py  test_storage.py  test_storage_branch_ids.py  test_storage_branches.py
integtests/tools/components/: test_tools.py
integtests/tools/flow/: conftest.py  test_scheduler.py  test_tools.py
integtests/tools/semantic/: test_schema.py  test_tools.py
operator/: README.md
patches/: mcp-1.9.3-py3-none-any.whl  mcp-redirect-uri.patch  mcp-session-status-fix.patch
scripts/: e2e-local-backend.py  setup_integtest_env.sh  test-local-backend.sh  test-with-kaibench.sh
src/keboola_mcp_server/: __init__.py  authorization.py  cancellation.py  cli.py  client.py  component_tools.py  config.py  connections.py  database.py  debugging_prompt.py  doc_tools.py  errors.py  generate_tool_docs.py  jobs_tools.py  links.py  mcp.py  oauth.py  preview.py  project_registry.py  server.py  sql_tools.py  storage_tools.py  to_delete.py  utils.py  workspace.py
src/keboola_mcp_server/apps/: __init__.py  config_diff.html  data_chart.html  job_monitor.html
src/keboola_mcp_server/clients/: __init__.py  ai_service.py  base.py  client.py  data_science.py  encryption.py  jobs_queue.py  manage.py  metastore.py  query.py  scheduler.py  storage.py  sync_actions.py
src/keboola_mcp_server/components/: model.py  modify_tools.py  read_tools.py  tools.py  utils.py
src/keboola_mcp_server/local_backend/: __init__.py  appserver.py  backend.py  migrate.py  tools.py
src/keboola_mcp_server/prompts/: __init__.py  add_prompts.py  keboola_prompts.py  local_prompts.py
src/keboola_mcp_server/resources/: conditional-flow-schema.json  storage-schema.json
src/keboola_mcp_server/tools/: _validate.py  branches.py  config_diff.py  constants.py  data_apps.py  data_chart.py  doc.py  flow.py  job_monitor.py  jobs.py  oauth.py  project.py  restrictions.py  search.py  sql.py  storage.py  storage_helpers.py  usage.py  validation.py  workspace.py
src/keboola_mcp_server/validators/: __init__.py  exceptions.py  storage_schema.py  validate.py
tests/: .coverage  conftest.py  coverage.xml  test_authorization.py  test_cancellation.py  test_client.py  test_client_events.py  test_component_tools.py  test_config.py  test_context_parameter_enforcement.py  test_database.py  test_doc_tools.py  test_errors.py  test_jobs_tools.py  test_mcp.py  test_mcp_tools_filtering.py  test_oauth.py  test_preview.py  test_project_lock.py  test_project_registry.py  test_role_based_authorization.py  test_server.py  test_sql_tools.py  test_storage_tools.py  test_workspace.py
tests/apps/: test_app_helpers.py  test_config_diff_html.py  test_data_chart_html.py  test_job_monitor_html.py  test_registration.py
tests/clients/: test_client.py  test_data_science.py  test_metastore.py  test_storage_events.py
tests/components/: conftest.py  test_modify_tools.py  test_read_tools.py  test_utils.py
tests/docker/: ci.sh
tests/local_backend/: test_backend.py  test_config.py  test_dataapp.py  test_docker.py  test_integration.py  test_migrate.py  test_schema.py  test_tools.py
tests/resources/: root_parameters_schema.json
tests/resources/storage/: storage_valid_5.json
tests/search/: tools_test.py
tests/tools/: test_config_diff.py  test_data_apps.py  test_data_chart.py  test_doc.py  test_flow.py  test_flows.py  test_job_monitor.py  test_jobs.py  test_oauth.py  test_project.py  test_search.py  test_semantic.py  test_sql.py  test_storage.py  test_validate.py
tests/tools/components/: conftest.py  test_components.py  test_sql_utils.py  test_tf_update.py  test_tools.py  test_utils.py  test_utils_validation.py  test_validate.py  (+1 more)
(+66 files in other folders)
