[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keboola-mcp-server"
version = "0.10.2"
description = "MCP server for interacting with Keboola Connection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Keboola", email = "devel@keboola.com" }
]
dependencies = [
    "mcp[cli] ~= 1.6",
    "kbcstorage ~= 0.9",
    "httpx ~= 0.28",
    "google-cloud-bigquery ~= 3.31"
]

[project.optional-dependencies]
dev = [
    "black ~= 25.1",
    "build ~= 1.2",
    "isort ~= 6.0",
    "mypy ~= 1.5",
    "pytest ~= 8.3",
    "pytest-asyncio ~= 0.25",
    "pytest-cov ~= 6.0",
    "pytest-mock ~= 3.14",
    "tox~=4.23",
]

[project.scripts]
keboola-mcp = "keboola_mcp_server.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["src/keboola_mcp_server"]

[tool.pytest.ini_options]
addopts = "--cov=keboola_mcp_server --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.flake8]
max-line-length = 120
import-order-style = "edited"
min_python_version = "3.10.0"
# Skip checking I101, we want to sort imports in case sensitive manner
extend-ignore = ["I101"]
application-package-names = ["keboola_mcp_server"]

[tool.tox]
requires = ["tox>=4.23", "black>=25.1", "isort>=6.0"]
env_list = ["python", "black", "isort", "flake8"]

[tool.tox.env_run_base]
description = "Run tests"
extras = ["dev"]
package = "wheel"
wheel_build_env = ".pkg"
commands = [["pytest", "--junitxml", "./test-results.xml"]]

[tool.tox.env.black]
description = "Run black"
deps = [
    "black"
]
commands = [
    ["black", "src/", "tests/", "--check"]
]

[tool.tox.env.isort]
description = "Run isort"
deps = [
    "isort"
]
commands = [
    ["isort", "src/", "tests/", "--check"]
]

[tool.tox.env.flake8]
description = "Run code style check by flake8"
deps = [
    "flake8",
    "flake8-bugbear",
    "flake8-colors",
    "flake8-import-order",
    "flake8-typing-imports",
    "Flake8-pyproject",
    "pep8-naming",
]
package = "skip"
commands = [
    ["flake8", "src/", "tests/"]
]
